--- a/src/sass/_loading-modal.scss
+++ b/src/sass/_loading-modal.scss
@@ -18,20 +18,20 @@
         height: 140px;
         width: 140px;
         transform: rotate(0deg);
-        animation: loading 10s infinite linear;
+        animation: loading 5s infinite linear;
         box-shadow: 0px 0px 4px 4px rgba(0, 0, 0, 0.5);
 
         @keyframes loading {
             0% {
                 transform: rotate(0deg);
-                filter: hue-rotate(0deg) grayscale(70%);
+                filter: hue-rotate(0deg);
             }
             50% {
-                filter: hue-rotate(360deg) grayscale(70%);
+                filter: hue-rotate(360deg);
             }
             100% {
                 transform: rotate(360deg);
-                filter: hue-rotate(360deg) grayscale(70%);
+                filter: hue-rotate(360deg);
             }
         }
     }
