changed font / updated td editable

--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -1,14 +1,11 @@
 @font-face {
-    font-family: "Anonymous Mono";
-    src: url("../src/fonts/B612Mono-Regular.ttf") format("truetype");
+    font-family: 'AzeretMono';
+    src: url('../src/fonts/AzeretMono-VariableFont_wght.ttf') format('truetype');
+    font-style: normal;
 }
 
 @font-face {
-    font-family: "Righteous";
-    src: url("../src/fonts/Righteous-Regular.ttf") format("truetype");
-}
-
-@font-face {
-    font-family: "RobotoMono";
-    src: url("../src/fonts/RobotoMono-ExtraLight.ttf") format("truetype");
+    font-family: 'AzeretMono';
+    src: url('../src/fonts/AzeretMono-Italic-VariableFont_wght.ttf') format('truetype');
+    font-style: italic;
 }
