--- a/src/sass/_normalize.scss
+++ b/src/sass/_normalize.scss
@@ -6,7 +6,7 @@ html {
 
 body {
     margin: 0;
-    font-family: 'AzeretMono', monospace;
+    font-family: 'B612Mono', monospace;
 }
 main {
     display: block;
@@ -24,7 +24,7 @@ hr {
 }
 
 pre {
-    font-family: 'AzeretMono', monospace;
+    font-family: 'B612Mono', monospace;
     font-size: 1em;
 }
 
@@ -46,7 +46,7 @@ strong {
 code,
 kbd,
 samp {
-    font-family: 'AzeretMono', monospace;
+    font-family: 'B612Mono', monospace;
     font-size: 1em;
 }
 
