updating php settings

--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -1,24 +1,24 @@
 @font-face {
-    font-family: 'B612Mono';
-    src: url('../src/fonts/B612Mono-Regular.ttf') format('truetype');
+    font-family: 'b612mono';
+    src: url('../src/fonts/b612mono-regular.ttf') format('truetype');
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'B612Mono';
-    src: url('../src/fonts/B612Mono-Italic.ttf') format('truetype');
+    font-family: 'b612mono';
+    src: url('../src/fonts/b612mono-italic.ttf') format('truetype');
     font-style: italic;
 }
 
 @font-face {
-    font-family: 'B612Mono';
-    src: url('../src/fonts/B612Mono-Bold.ttf') format('truetype');
+    font-family: 'b612mono';
+    src: url('../src/fonts/b612mono-bold.ttf') format('truetype');
     font-weight: 700;
 }
 
 @font-face {
-    font-family: 'B612Mono';
-    src: url('../src/fonts/B612Mono-BoldItalic.ttf') format('truetype');
+    font-family: 'b612mono';
+    src: url('../src/fonts/b612mono-bolditalic.ttf') format('truetype');
     font-weight: 700;
     font-style: italic;
 }
