Changed p content editable to inputs / set allowTags option
Created a filter on the new input elements that will remove any tags starting with <[*] and ending with />. A checkbox has been added to disable the filter

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,1 +1,6 @@
 $color_dark-gray: #444444;
+
+[dir='rtl']:is(.form-line-column, .form-label-right, .form-radio-item) {
+    float: right;
+    text-align: right;
+}
