building editor table styles

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,4 +1,10 @@
-$color_dark-gray: #444444;
+$color_dark-gray: #242424;
+$color_gray: #2d2d2d;
+$color_light-gray: #dedede;
+$color_purple: #9e7bb0;
+$color_orange: #cc8242;
+$color_light-orange: #ffc66d;
+$color_blue: #179fff;
 
 [dir='rtl']:is(.form-line-column, .form-label-right, .form-radio-item) {
     float: right;
