--- a/src/sass/_loading-modal.scss
+++ b/src/sass/_loading-modal.scss
@@ -1,42 +1,37 @@
 @import 'variables';
 
 .loading-modal {
-	background      : #fff;
-	display         : flex;
-	align-items     : center;
-	justify-content : center;
-	position        : fixed;
-	top             : 0;
-	left            : 0;
-	height          : 100vh;
-	width           : 100vw;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
 
-	.loading-circle {
-		position      : fixed;
-		border-radius : 50%;
-		border        : 10px inset red;
-		height        : 140px;
-		width         : 140px;
-		transform     : rotate(0deg);
-		animation     : loading 5s infinite linear;
-		box-shadow    : 0px 0px 4px 4px rgba(0, 0, 0, 0.5);
+    .loading-circle {
+        position: fixed;
+        border-radius: 50%;
+        border: 5px inset $color_purple;
+        height: 140px;
+        width: 140px;
+        transform: rotate(0deg);
+        animation: loading 5s infinite linear;
+        box-shadow: 0px 0px 4px 4px rgba(0, 0, 0, 0.5);
 
-		@keyframes loading {
-			0% {
-				transform : rotate(0deg);
-				filter    : hue-rotate(0deg);
-			}
-			50% {
-				filter : hue-rotate(360deg);
-			}
-			100% {
-				transform : rotate(360deg);
-				filter    : hue-rotate(360deg);
-			}
-		}
-	}
+        @keyframes loading {
+            0% {
+                transform: rotate(0deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+    }
 
-	span {
-		font-size : 2rem;
-	}
+    span {
+        font-size: 2rem;
+    }
 }
