--- a/src/sass/_app.scss
+++ b/src/sass/_app.scss
@@ -10,6 +10,19 @@ h1 {
     font-size: 2rem;
 }
 
+h3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #123456;
+}
+
+h4 {
+    display: flex;
+    justify-self: unset;
+    align-items: center;
+}
+
 h2 {
     display: inline-block;
     padding: 1rem;
@@ -97,41 +110,92 @@ h3 {
 
 .editor-table {
     display: block;
-    border-collapse: collapse;
+    border-collapse: separate;
     background-color: $color_gray;
     padding: 2rem;
     margin: 2rem 0;
     border-radius: 5px;
     border: 1px solid lighten($color_gray, 10%);
     overflow-x: scroll;
-    max-width: calc(100vw - 340px);
+    max-width: calc(100vw - 290px);
 
-    td {
-        textarea {
-            height: 30px;
-            width: 200px;
-            resize: none;
+    #table-body {
+    }
+
+    tr {
+    }
+
+    .th-controls,
+    .td-body-controls {
+        background-color: $color_purple;
+
+        button,
+        label {
+            font-size: 1rem;
+        }
+
+        button {
+            padding: 0;
+            margin: 0;
             border-radius: none;
         }
 
-        .td-body-controls {
-            background-color: #fff;
+        input {
+            height: 10px;
+            width: 10px;
+        }
+    }
 
-            button,
+    th,
+    td {
+        text-align: center;
+        border: 2px solid #fff;
+
+        textarea {
+            word-wrap: break-word;
+            font-size: 1.2rem;
+            width: 100%;
+            height: 100%;
+            resize: none;
+            border-radius: none;
+            background: $color_light-gray;
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+        }
+    }
+
+    td {
+        .isheader-container {
+            margin: 0 0.5rem;
+
             label {
-                font-size: 1rem;
+                margin-right: 0.2rem;
+            }
+        }
+
+        .isheader-scope-container {
+            display: flex;
+            justify-content: center;
+            font-size: 1rem;
+            padding-top: 0.4rem;
+
+            span {
+                margin-right: 0.5rem;
             }
 
-            button {
-                padding: 0;
-                margin: 0;
-                border-radius: none;
+            label {
+                margin-right: 0.2rem;
             }
 
             input {
-                height: 10px;
-                width: 10px;
+                margin-right: 0.5rem;
             }
         }
     }
+}
+
+//deprecated
+#table-col-control-row {
+    display: none;
 }
