updating readme and styles

--- a/src/sass/_app.scss
+++ b/src/sass/_app.scss
@@ -1,10 +1,10 @@
 body {
-  background-color: $color_dark-gray;
+  background-color: $color_very-dark-grey;
 }
 
 h1 {
-  background-color: $color_gray;
-  color: $color_light-gray;
+  background-color: $color_very-dark-grey;
+  color: $color_minty-green;
   margin: 0;
   padding: 1rem;
   font-size: 2rem;
