--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3,10 +3,22 @@ $color_gray: #2d2d2d;
 $color_light-gray: #dedede;
 $color_purple: #9e7bb0;
 $color_orange: #cc8242;
-$color_light-orange: #ffc66d;
+$color_color_light-orange: #ffc66d;
 $color_blue: #179fff;
 
+$color_very-dark-grey: #202020;
+$color_dark-grey: #5a524c;
+$color_light-kinda-brownish: #d4be98;
+$color_very-light-kinda-brownish: #ede4d4;
+$color_light-purpleish-pinkish: #da9aac;
+$color_minty-green: #8db686;
+$color_butterscotch: #d8a657;
+$color_grass: #a4b162;
+$color_strawberry: #ea6962;
+$color_yummy-orange: #e78a4e;
+$color_blue-coconut: #2f7b97;
+
 [dir='rtl']:is(.form-line-column, .form-label-right, .form-radio-item) {
-    float: right;
-    text-align: right;
+  float: right;
+  text-align: right;
 }
