--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -1,24 +1,24 @@
 @font-face {
-    font-family: 'b612mono';
-    src: url('../src/fonts/b612mono-regular.ttf') format('truetype');
-    font-style: normal;
+  font-family: 'DraftingMono';
+  src: url('../src/fonts/DraftingMono-regular.ttf') format('truetype');
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'b612mono';
-    src: url('../src/fonts/b612mono-italic.ttf') format('truetype');
-    font-style: italic;
+  font-family: 'DraftingMono';
+  src: url('../src/fonts/DraftingMono-MediumItalic.ttf') format('truetype');
+  font-style: italic;
 }
 
 @font-face {
-    font-family: 'b612mono';
-    src: url('../src/fonts/b612mono-bold.ttf') format('truetype');
-    font-weight: 700;
+  font-family: 'DraftingMono';
+  src: url('../src/fonts/DraftingMono-Bold.ttf') format('truetype');
+  font-weight: 700;
 }
 
 @font-face {
-    font-family: 'b612mono';
-    src: url('../src/fonts/b612mono-bolditalic.ttf') format('truetype');
-    font-weight: 700;
-    font-style: italic;
+  font-family: 'DraftingMono';
+  src: url('../src/fonts/DraftingMono-BoldItalic.ttf') format('truetype');
+  font-weight: 700;
+  font-style: italic;
 }
