--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -1,4 +1,9 @@
 @font-face {
+  font-family: 'Yomogi-regular';
+  src: url('../src/fonts/Yomogi-Regular.ttf') format('truetype');
+}
+
+@font-face {
   font-family: 'DraftingMono';
   src: url('../src/fonts/DraftingMono-regular.ttf') format('truetype');
   font-style: normal;
