--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3,7 +3,7 @@ $color_gray: #2d2d2d;
 $color_light-gray: #dedede;
 $color_purple: #9e7bb0;
 $color_orange: #cc8242;
-$color_color_light-orange: #ffc66d;
+$color_light-orange: #ffc66d;
 $color_blue: #179fff;
 
 $color_very-dark-grey: #202020;
