--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,8 @@
 }
 
 body {
-  font-family: 'DraftingMono';
+  font-family: 'CourierPrimeSans';
   font-size: 1.8rem;
+  font-weight: 500;
+  letter-spacing: -1px;
 }
