--- a/src/sass/_app.scss
+++ b/src/sass/_app.scss
@@ -9,33 +9,39 @@ body {
 }
 
 h1 {
-  background-color: $color_very-dark-grey;
-  color: $color_orange;
-  margin: 0;
-  padding: 1rem;
   font-size: 3rem;
+  font-weight: 400;
+  letter-spacing: -2px;
+  line-height: 4rem;
+  color: $color_light-kinda-brownish;
+  background-color: darken($color_very-dark-grey, 4%);
+  margin: 0 0 2rem 0;
+  padding: 1rem 2rem;
 
-  &:before,
-  &:after {
-    color: $color_very-light-kinda-brownish;
-  }
+  span {
+    letter-spacing: -3px;
 
-  &:before {
-    content: '<';
-  }
+    &:before,
+    &:after {
+      opacity: 0.3;
+    }
 
-  &:after {
-    content: '/>';
+    &:before {
+      content: '<';
+    }
+
+    &:after {
+      content: '></table>';
+    }
   }
 }
 
 h2 {
   display: inline-block;
-  padding: 1rem;
-  margin: 2rem;
-  color: $color_very-light-kinda-brownish;
-  text-shadow: 1px 1px 0 darken($color_light-kinda-brownish, 20%);
-  font-size: 2.4rem;
+  padding: 0.2rem;
+  margin: 0 2rem;
+  color: $color_light-gray;
+  font-size: 2.5rem;
 }
 
 h3 {
@@ -50,7 +56,7 @@ h3 {
   #editor-table-controls {
     background-color: $color_gray;
     padding: 2rem;
-    margin: 2rem;
+    margin: 0 2rem;
     display: flex;
     flex-direction: column;
     border-radius: 5px;
@@ -116,13 +122,12 @@ h3 {
 
 .editor-table {
   table-layout: auto;
-  width: 100%;
   height: 100%;
   display: block;
   border-collapse: separate;
   background-color: $color_gray;
   padding: 2rem;
-  margin: 2rem 0;
+  margin: 0;
   border-radius: 5px;
   border: 1px solid lighten($color_gray, 10%);
   overflow-x: scroll;
