--- a/src/sass/_app.scss
+++ b/src/sass/_app.scss
@@ -10,10 +10,9 @@ body {
 
 h1 {
   font-size: 2.5rem;
-  font-weight: 700;
   letter-spacing: -2px;
   line-height: 4rem;
-  color: $color_light-kinda-brownish;
+  color: #fff;
   background-color: darken($color_very-dark-grey, 4%);
   margin: 0 0 2rem 0;
   padding: 1rem 2rem;
@@ -42,10 +41,12 @@ h2 {
   margin: 0 2rem;
   padding: 0.2rem;
   font-size: 2.2rem;
-  color: $color_very-light-kinda-brownish;
+  color: #fff;
 }
 
 h3 {
+  padding: 1rem 0;
+  margin: 0;
   color: $color_light-gray;
 }
 
@@ -64,16 +65,15 @@ h3 {
     border: 1px solid lighten($color_gray, 10%);
 
     button {
-      background-color: $color_grass;
-      font-size: 1.6rem;
-      color: #fff;
+      background-color: $color_light-gray;
+      font-size: 1.4rem;
       text-align: left;
       box-shadow: none;
       letter-spacing: -1px;
-      border: 1px solid darken($color_strawberry, 15%);
       border-radius: 3px;
       margin: 1px;
-      padding: 0.6rem;
+      height: 30px;
+      border: 1px solid transparent;
 
       &:hover,
       &:focus {
@@ -136,10 +136,11 @@ h3 {
   border-radius: 5px;
   border: 1px solid lighten($color_gray, 10%);
   overflow-x: scroll;
-  max-width: calc(100vw - 290px);
+  max-width: calc(100vw - 245px);
 
   .th-controls,
-  .td-body-controls {
+  .td-body-controls,
+  .td-footer-controls {
     background-color: $color_purple;
 
     button,
