--- a/src/sass/_app.scss
+++ b/src/sass/_app.scss
@@ -10,12 +10,13 @@ body {
 
 h1 {
   font-size: 2.5rem;
+  font-weight: 300;
   letter-spacing: -2px;
   line-height: 4rem;
   color: #fff;
   background-color: darken($color_very-dark-grey, 4%);
   margin: 0 0 2rem 0;
-  padding: 1rem 2rem;
+  padding: 1px 2rem;
 
   // meh, not sure about this
   // span {
@@ -45,7 +46,8 @@ h2 {
 }
 
 h3 {
-  padding: 1rem 0;
+  font-size: 1.6rem;
+  padding: 0;
   margin: 0;
   color: $color_light-gray;
 }
@@ -141,7 +143,17 @@ h3 {
   .th-controls,
   .td-body-controls,
   .td-footer-controls {
-    background-color: $color_purple;
+    display: flex;
+    flex-direction: column;
+    background-color: $color_grass;
+
+    .controls-top-container {
+      display: flex;
+    }
+
+    .rowcol-button-container {
+      display: flex;
+    }
 
     button,
     label {
@@ -149,8 +161,10 @@ h3 {
     }
 
     button {
+      display: inline-block;
       padding: 0;
       margin: 0;
+      width: auto;
       border-radius: none;
     }
 
@@ -168,7 +182,6 @@ h3 {
   td {
     height: inherit;
     text-align: center;
-    border: 1px solid #fff;
 
     .grid-container {
       display: flex;
@@ -194,9 +207,12 @@ h3 {
 
   td {
     .isheader-container {
+      display: flex;
+      align-items: center;
       margin: 0 0.5rem;
 
       label {
+        padding: 2px 0;
         margin-right: 0.2rem;
       }
     }
@@ -222,7 +238,28 @@ h3 {
   }
 }
 
-//deprecated
+/*
+deprecated.
+ TODO 
+ fix the colgroup controls (this hides the text align option only...currently
+*/
 #table-col-control-row {
   display: none;
+}
+
+.table-code-and-preview-section {
+  display: flex;
+
+  #markup,
+  #preview {
+    padding: 1rem;
+    margin: 2rem;
+    border-radius: 5px;
+    border: 1px solid lighten($color_gray, 10%);
+    background-color: $color_gray;
+  }
+
+  #markup {
+    margin-right: 0;
+  }
 }
