--- a/src/sass/_app.scss
+++ b/src/sass/_app.scss
@@ -8,6 +8,10 @@ body {
   background-color: $color_very-dark-grey;
 }
 
+.pre-wrap {
+  white-space: pre-wrap;
+}
+
 h1 {
   font-size: 2.5rem;
   font-weight: 300;
@@ -192,11 +196,12 @@ h3 {
         flex-grow: 1;
         word-wrap: break-word;
         font-size: 1.2rem;
+        height: 21px; // 16 + padding. Also set in "addResizingToTextareas.js"
         width: 100%;
         resize: none;
         border-radius: none;
         background: $color_light-gray;
-        padding: 0;
+        padding: 5px 2px;
         margin: 0;
         box-sizing: border-box;
         border: none;
