--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -6,8 +6,8 @@ $color_orange: #cc8242;
 $color_light-orange: #ffc66d;
 $color_blue: #179fff;
 
-$color_very-dark-grey: #202020;
-$color_dark-grey: #5a524c;
+$color_very-dark-gray: #202020;
+$color_dark-gray: #5a524c;
 $color_light-kinda-brownish: #d4be98;
 $color_very-light-kinda-brownish: #ede4d4;
 $color_light-purpleish-pinkish: #da9aac;
