fixed some bugs with the csv importer

--- a/src/sass/_app.scss
+++ b/src/sass/_app.scss
@@ -332,6 +332,10 @@ deprecated.
       h2 {
         margin: 0.5rem 0;
       }
+
+      button {
+        margin: 0 2px;
+      }
     }
 
     code#table-code {
