--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -2,7 +2,7 @@ $color_dark-gray: #242424;
 $color_gray: #2d2d2d;
 $color_light-gray: #dedede;
 $color_purple: #9e7bb0;
-$color_orange: #cc8242;
+$color_orange: #cd8546;
 $color_light-orange: #ffc66d;
 $color_blue: #179fff;
 
