new fonts and added delete row button to rows

--- a/src/sass/_app.scss
+++ b/src/sass/_app.scss
@@ -369,7 +369,7 @@ deprecated.
       button {
         font-size: 1.4rem;
         padding: 5px;
-        margin: 0 5px;
+        margin: 5px;
         border: 1px solid transparent;
         border-radius: none;
 
