--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -1,24 +1,24 @@
 @font-face {
-  font-family: 'CourierPrimeSans';
-  src: url('../src/fonts/courier-prime-sans.ttf') format('truetype');
+  font-family: 'SpaceMono';
+  src: url('../src/fonts/SpaceMono-Regular.ttf') format('truetype');
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'CourierPrimeSans';
-  src: url('../src/fonts/courier-prime-sans-italic.ttf') format('truetype');
+  font-family: 'SpaceMono';
+  src: url('../src/fonts/SpaceMono-Italic.ttf') format('truetype');
   font-style: italic;
 }
 
 @font-face {
-  font-family: 'CourierPrimeSans';
-  src: url('../src/fonts/courier-prime-sans-bold.ttf') format('truetype');
+  font-family: 'SpaceMono';
+  src: url('../src/fonts/SpaceMono-Bold.ttf') format('truetype');
   font-weight: 700;
 }
 
 @font-face {
-  font-family: 'CourierPrimeSans';
-  src: url('../src/fonts/courier-prime-sans-bold-italic.ttf') format('truetype');
+  font-family: 'SpaceMono';
+  src: url('../src/fonts/SpaceMono-BoldItalic.ttf') format('truetype');
   font-weight: 700;
   font-style: italic;
 }
