--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,7 +16,7 @@ h4 {
 }
 
 body {
-  font-family: 'CourierPrimeSans';
+  font-family: 'SpaceMono';
   font-size: 1.8rem;
   font-weight: 400;
   letter-spacing: -1px;
