did a buncha stuff

--- a/src/sass/_normalize.scss
+++ b/src/sass/_normalize.scss
@@ -6,7 +6,7 @@ html {
 
 body {
   margin: 0;
-  font-family: 'SpaceMono';
+  font-family: 'courier-prime-sans';
 }
 main {
   display: block;
@@ -24,7 +24,7 @@ hr {
 }
 
 pre {
-  font-family: 'B612Mono', monospace;
+  font-family: 'courier-prime-sans', monospace;
   font-size: 1em;
 }
 
@@ -46,7 +46,7 @@ strong {
 code,
 kbd,
 samp {
-  font-family: 'B612Mono', monospace;
+  font-family: 'courier-prime-sans', monospace;
   font-size: 1em;
 }
 
